<?xml version="1.0"?>
<package format="3">
  <name>camera_delay</name>
  <version>0.0.0</version>
  <description>Simulate camera delay</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv_python</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
